--- a/bai 4/index.html
+++ b/bai 4/index.html
@@ -98,6 +98,30 @@
         </ol>
     </ol>
     
+    <hr>
 
+    <h3>An unordered list with disc bullets (default)</h3>
+    <ul>
+        <li>Telephone</li>
+        <li>Cellular Phone</li>
+        <li>Television</li>
+        <li>Fax machine</li>
+    </ul>
+
+    <h3>An unordered list with square bullets</h3>
+    <ul type="square">
+        <li>Telephone</li>
+        <li>Cellular Phone</li>
+        <li>Television</li>
+        <li>Fax machine</li>
+    </ul>
+
+    <h3>An unordered list with circle bullets</h3>
+    <ul type="circle">
+        <li>Telephone</li>
+        <li>Cellular Phone</li>
+        <li>Television</li>
+        <li>Fax machine</li>
+    </ul>
 </body>
 </html>
