--- a/bai 4/index.html
+++ b/bai 4/index.html
@@ -121,7 +121,35 @@
         <li>Telephone</li>
         <li>Cellular Phone</li>
         <li>Television</li>
-        <li>Fax machine</li>
+        <li>Fax machine</li> 
+    </ul>
+
+    <h3>An ordered / unordered nested list: </h3>
+    <ul>
+        <li>Book genres</li>
+        <ol>
+            <li>Fiction</li>
+            <li>Non-Fiction</li>
+            <li>Adventure</li>
+            <li>Educational</li>
+        </ol>
+        <li>Vehicle types:</li>
+        <ol>
+            <li>Car</li>
+            <li>Van</li>
+            <li>Truck</li>
+            <li>Trailor</li>
+        </ol>
+    </ul>
+
+    <h3>A defination list</h3>
+    <li type="none">HTML</li>
+    <ul type="none">
+        <li>Stands for Hyper text marks up languages.A coputer use to create webpages</li>
+    </ul>
+    <li type="none">Guitar</li>
+    <ul type="none">
+        <li>A stringed musical instrument</li>
     </ul>
 </body>
 </html>
